--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Project General
-*.vagrant*
+2-Web-Application/simple_web_app_ansible/vagrant-webapp-ansible/.vagrant/*
+2-Web-Application/vagrant-web-app/.vagrant/*
+1-Introduction/vagrant-labs/.vagrant/*
+3-File-Separation/simple_webapp_v2/vagrant-webapp-ansible/.vagrant/*
 
 # Log files (if you are creating logs in debug mode, uncomment this)
 *.log
